--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ install:
   script:
     - npm ci
   only:
-    - master
+    - main
     - merge_requests
 
 build:
@@ -39,7 +39,7 @@ build:
     paths:
       - dist/
   only:
-    - master
+    - main
     - merge_requests
 
 lint:
@@ -55,7 +55,7 @@ lint:
   script:
     - npm run lint
   only:
-    - master
+    - main
     - merge_requests
 
 test:
@@ -75,7 +75,7 @@ test:
   script:
     - npm run test:ci
   only:
-    - master
+    - main
     - merge_requests
 
 coverage:
@@ -95,5 +95,5 @@ coverage:
   script:
     - npm run test:report:coverage
   only:
-    - master
+    - main
     - merge_requests
