--- a/package.json
+++ b/package.json
@@ -37,18 +37,19 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.3",
+    "@anmiles/eslint-config": "^1.0.6",
+    "@types/jest": "^29.5.1",
     "@types/lodash": "^4.14.191",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "eslint": "^8.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.40.0",
     "eslint-plugin-align-assignments": "^1.1.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "jest": "^28.1.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.5.0",
     "nyc": "^15.1.0",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^28.0.5",
-    "typescript": "^4.7.4"
+    "rimraf": "^5.0.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   }
 }
