--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "google-calendar-entries",
   "version": "1.1.3",
-  "description": "Get all google calendar entries",
+  "description": "View and manage google calendar entries",
   "keywords": [
     "google",
-    "calendar"
+    "calendar",
+    "events"
   ],
   "author": "Anatoliy Oblaukhov",
   "homepage": "https://gitlab.com/anmiles/google-calendar-entries",
