--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@anmiles/google-api-wrapper": "^8.0.2",
-    "colorette": "^2.0.19",
+    "@anmiles/logger": "^2.1.3",
     "execa": "^5.1.1",
     "googleapis": "^118.0.0",
     "lodash": "^4.17.21"
