--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@anmiles/eslint-config": "^1.0.6",
+    "@anmiles/jest-extensions": "^1.0.0",
     "@types/jest": "^29.5.1",
     "@types/lodash": "^4.14.194",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
