--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   "engines": {
     "node": ">=18.14.2"
   },
-  "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf dist && tsc",
-    "lint": "eslint --ext .js,.ts .",
+    "build": "rimraf dist && tsc -p ./tsconfig.build.json",
+    "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --verbose",
     "test:coverage": "npm test -- --coverage",
@@ -31,27 +30,28 @@
     "login": "node ./dist/login.js"
   },
   "dependencies": {
-    "@anmiles/google-api-wrapper": "^15.3.0",
-    "@anmiles/logger": "^4.0.1",
+    "@anmiles/google-api-wrapper": "^17.0.0",
+    "@anmiles/logger": "^6.0.0",
     "execa": "^5.1.1",
-    "googleapis": "^126.0.1",
+    "googleapis": "^130.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@anmiles/eslint-config": "^2.0.2",
-    "@anmiles/jest-extensions": "^2.0.1",
-    "@types/jest": "^29.5.8",
-    "@types/lodash": "^4.14.201",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
+    "@anmiles/eslint-config": "^5.0.0",
+    "@anmiles/jest-extensions": "^4.0.0",
+    "@anmiles/tsconfig": "^2.0.0",
+    "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.14.202",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-align-assignments": "^1.1.2",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.6.3",
     "jest": "^29.7.0",
     "nyc": "^15.1.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   }
 }
