--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,12 @@
 {
+	"extends": "./node_modules/@anmiles/tsconfig/tsconfig.json",
+
 	"compilerOptions": {
-		"module": "CommonJS",
-		"target": "ES2019",
-
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-
 		"rootDir": "./src",
 		"outDir": "./dist",
-
-		"allowJs": false,
-		"sourceMap": true,
-		"declaration": true,
-		"noImplicitAny": true,
-		"esModuleInterop": true,
-		"strictNullChecks": true,
-		"allowSyntheticDefaultImports": true,
 	},
-	"exclude": [
-		"**/node_modules/",
-		"**/__tests__/",
-		"coverage/",
-		"dist/",
-		"input/",
-		"secrets/",
+
+	"include": [
+		"src",
 	],
 }
