--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "events"
   ],
   "author": "Anatoliy Oblaukhov",
-  "homepage": "https://gitlab.com/anmiles/google-calendar-entries",
-  "repository": "gitlab:anmiles/google-calendar-entries",
+  "homepage": "https://github.com/anmiles/google-calendar-entries",
+  "repository": "github:anmiles/google-calendar-entries",
   "license": "MIT",
   "engines": {
     "node": ">=18.14.2"
   },
   "scripts": {
     "build": "rimraf dist && tsc -p ./tsconfig.build.json",
+    "build:ci": "tsc -noEmit -p ./tsconfig.build.json",
     "lint": "eslint --ext .js,.ts .",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --verbose",
@@ -30,20 +31,20 @@
     "login": "node ./dist/login.js"
   },
   "dependencies": {
-    "@anmiles/google-api-wrapper": "^17.0.5",
-    "@anmiles/logger": "^6.0.0",
+    "@anmiles/google-api-wrapper": "^17.0.9",
+    "@anmiles/logger": "^6.0.2",
     "execa": "^5.1.1",
     "googleapis": "^130.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@anmiles/eslint-config": "^5.0.0",
-    "@anmiles/jest-extensions": "^4.0.0",
-    "@anmiles/tsconfig": "^2.0.0",
+    "@anmiles/eslint-config": "^5.0.2",
+    "@anmiles/jest-extensions": "^4.0.3",
+    "@anmiles/tsconfig": "^2.0.1",
     "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.202",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
     "eslint-plugin-align-assignments": "^1.1.2",
     "eslint-plugin-import": "^2.29.1",
@@ -51,7 +52,7 @@
     "jest": "^29.7.0",
     "nyc": "^15.1.0",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
 }
