--- a/package.json
+++ b/package.json
@@ -12,51 +12,60 @@
 	"repository": "github:anmiles/google-calendar-entries",
 	"license": "MIT",
 	"engines": {
-		"node": ">=18.18.0"
+		"node": ">=20.19.0"
 	},
 	"scripts": {
-		"build": "rimraf dist && tsc -p ./tsconfig.build.json",
-		"lint": "eslint .",
-		"lint:fix": "npm run lint -- --fix",
+		"spellcheck": "cspell .",
+		"prebuild": "rimraf dist",
+		"build": "tsc -p ./tsconfig.build.json",
+		"lint": "eslint",
+		"lint:fix": "eslint --fix",
 		"test": "jest --verbose",
 		"test:coverage": "npm test -- --coverage",
 		"test:ci": "npm test -- --ci --coverage",
 		"test:watch": "npm test -- --watch",
 		"test:watch:coverage": "npm test -- --watch --coverage",
-		"test:report:coverage": "nyc report --nycrc-path ./coverage.config.js -t ./coverage --report-dir ./coverage",
+		"test:report:coverage": "nyc report",
 		"start": "node ./dist/index.js",
 		"create": "node ./dist/create.js",
 		"migrate": "node ./dist/migrate.js",
 		"login": "node ./dist/login.js"
 	},
 	"dependencies": {
-		"@anmiles/google-api-wrapper": "^18.0.2",
-		"@anmiles/logger": "^7.0.2",
+		"@anmiles/google-api-wrapper": "^19.0.0",
+		"@anmiles/logger": "^8.0.0",
 		"execa": "^5.1.1",
-		"googleapis": "^130.0.0",
+		"googleapis": "^148.0.0",
 		"lodash": "^4.17.21"
 	},
 	"devDependencies": {
-		"@anmiles/eslint-config": "^7.1.1",
-		"@anmiles/jest-extensions": "^5.0.3",
-		"@anmiles/tsconfig": "^3.0.1",
-		"@stylistic/eslint-plugin": "^1.7.0",
-		"@types/jest": "^29.5.12",
-		"@types/lodash": "^4.17.0",
-		"@typescript-eslint/eslint-plugin": "^7.3.1",
-		"@typescript-eslint/parser": "^7.3.1",
-		"eslint": "^8.57.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
+		"@anmiles/eslint-config": "^9.0.0",
+		"@anmiles/jest-extensions": "^6.0.0",
+		"@anmiles/tsconfig": "^4.0.0",
+		"@eslint/compat": "^1.2.9",
+		"@eslint/css": "^0.8.1",
+		"@eslint/js": "^9.27.0",
+		"@eslint/json": "^0.12.0",
+		"@eslint/markdown": "^6.4.0",
+		"@stylistic/eslint-plugin": "^4.2.0",
+		"@types/jest": "^29.5.14",
+		"@types/lodash": "^4.17.16",
+		"@typescript-eslint/eslint-plugin": "^8.32.1",
+		"@typescript-eslint/parser": "^8.32.1",
+		"cspell": "^9.0.1",
+		"eslint": "^9.27.0",
+		"eslint-import-resolver-typescript": "^4.3.5",
 		"eslint-plugin-align-assignments": "^1.1.2",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-jest": "^27.9.0",
-		"eslint-plugin-jsonc": "^2.14.1",
-		"eslint-plugin-n": "^16.6.2",
-		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-i18next": "^6.1.1",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-jest": "^28.11.0",
+		"eslint-plugin-n": "^17.18.0",
+		"eslint-plugin-promise": "^7.2.1",
 		"jest": "^29.7.0",
-		"nyc": "^15.1.0",
-		"rimraf": "^5.0.5",
-		"ts-jest": "^29.1.2",
-		"typescript": "^5.4.2"
+		"jiti": "^2.4.2",
+		"nyc": "^17.1.0",
+		"rimraf": "^6.0.1",
+		"ts-jest": "^29.3.4",
+		"typescript": "^5.8.3"
 	}
 }
